--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: "@JazzeeCommonBundle/Resources/config/services.yml" }
+    - { resource: "@JazzeeTextPageBundle/Resources/config/services.yml" }
 
 framework:
     #esi:             ~
@@ -44,13 +45,14 @@ doctrine:
         user:     %database_user%
         password: %database_password%
         charset:  UTF8
-        # if using pdo_sqlite as your database driver, add the path in parameters.yml
-        # e.g. database_path: %kernel.root_dir%/data/data.db3
-        # path:     %database_path%
-
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
+    
+doctrine_migrations:
+    dir_name: "%kernel.root_dir%/../src/Jazzee/CommonBundle/Migration"
+    namespace: "Jazzee\CommonBundle\Migration"
+    table_name: "doctrine_migration_versions"
 
 # Swiftmailer Configuration
 swiftmailer:
