--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
   - composer install --no-interaction
 
 script:
-  - php vendor/bin/phpunit
+  - php bin/phpunit -c app
+  - bin/phpcs --standard=app/phpcs.xml src
 
 after_script:
-  - vendor/bin/coveralls --exclude-no-stmt
+  - bin/coveralls --exclude-no-stmt
